<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.ai_crop_doctor.presentation.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_camera"
            app:destination="@id/cameraFragment" />

        <action
            android:id="@+id/action_home_to_map"
            app:destination="@id/mapFragment" />

        <action
            android:id="@+id/action_home_to_history"
            app:destination="@id/historyFragment" />
    </fragment>

    <!-- Camera Fragment -->
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.ai_crop_doctor.presentation.ui.camera.CameraFragment"
        android:label="Chụp ảnh"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_camera_to_result"
            app:destination="@id/diagnosisResultFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <!-- Diagnosis Result Fragment -->
    <fragment
        android:id="@+id/diagnosisResultFragment"
        android:name="com.example.ai_crop_doctor.presentation.ui.diagnosis.DiagnosisResultFragment"
        android:label="Kết quả chẩn đoán"
        tools:layout="@layout/fragment_diagnosis_result">

        <argument
            android:name="diagnosisId"
            app:argType="integer"
            android:defaultValue="-1" />

        <action
            android:id="@+id/action_result_to_expert_chat"
            app:destination="@id/expertChatFragment" />

        <action
            android:id="@+id/action_diagnosisResult_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- History Fragment -->
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.ai_crop_doctor.presentation.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_history_to_detail"
            app:destination="@id/diagnosisResultFragment" />
    </fragment>

    <!-- Map Fragment -->
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.ai_crop_doctor.presentation.ui.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <!-- Expert Chat Fragment -->
    <fragment
        android:id="@+id/expertChatFragment"
        android:name="com.example.ai_crop_doctor.presentation.ui.expert.ExpertChatFragment"
        android:label="Hỏi chuyên gia"
        tools:layout="@layout/fragment_expert_chat">

        <argument
            android:name="diagnosisId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

</navigation>
